tensor to cv image (denormalize)

--- a/implementations/pix2pix/Untitled.ipynb
+++ b/implementations/pix2pix/Untitled.ipynb
@@ -473,69 +473,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[126 129 118]\n",
-      "  [123 126 115]\n",
-      "  [120 123 112]\n",
-      "  ...\n",
-      "  [ 23  25  20]\n",
-      "  [ 27  29  24]\n",
-      "  [ 30  32  27]]\n",
-      "\n",
-      " [[125 128 117]\n",
-      "  [121 124 113]\n",
-      "  [118 121 110]\n",
-      "  ...\n",
-      "  [ 20  22  17]\n",
-      "  [ 23  25  20]\n",
-      "  [ 25  27  22]]\n",
-      "\n",
-      " [[126 129 118]\n",
-      "  [121 124 113]\n",
-      "  [116 119 108]\n",
-      "  ...\n",
-      "  [ 16  18  13]\n",
-      "  [ 18  20  15]\n",
-      "  [ 18  20  15]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[117 120 111]\n",
-      "  [119 122 113]\n",
-      "  [119 122 113]\n",
-      "  ...\n",
-      "  [ 14  17  10]\n",
-      "  [ 17  20  13]\n",
-      "  [ 19  22  15]]\n",
-      "\n",
-      " [[111 114 105]\n",
-      "  [111 114 105]\n",
-      "  [112 115 106]\n",
-      "  ...\n",
-      "  [ 17  20  13]\n",
-      "  [ 20  23  16]\n",
-      "  [ 22  25  18]]\n",
-      "\n",
-      " [[105 108  99]\n",
-      "  [106 109 100]\n",
-      "  [105 108  99]\n",
-      "  ...\n",
-      "  [ 20  23  16]\n",
-      "  [ 23  26  19]\n",
-      "  [ 25  28  21]]]\n"
+      "(179, 184, 188)\n",
+      "(181, 185, 186)\n"
      ]
     }
    ],
    "source": [
     "a = Image.open('sss.jpg')\n",
-    "a = np.array(a)\n",
-    "print(a)"
+    "print(a.getpixel((0, 55)))\n",
+    "b = Image.open('ss.jpg')\n",
+    "print(b.getpixel((0, 55)))"
    ]
   }
  ],
